--- a/css/sass/base/_flex.scss
+++ b/css/sass/base/_flex.scss
@@ -25,24 +25,29 @@ img {
 .fullpage-section {
 	width: 100%;
 	height: 100vh;
+	display: flex;
 }
 
-.section-container {
-	max-width: 960px;
-	padding: 30px;
-}
+// .section-container {
+// 	max-width: 960px;
+// 	padding: 30px;
+// }
 
 
 /**
  * NEW FLEX STUFF
  */
 
+.flex {
+    display: flex;
+}
+
 
 .flex-container {
 	max-width: 960px;
 	margin: 0 auto;
 	display: flex;
-	background: green;
+	padding: 30px;
 }
 
 .col-one {
@@ -56,13 +61,17 @@ img {
 	width: 400px;
 }
 
-.col-three {
+.col-one-third {
 	flex-basis: calc(100%/3);
+	margin: 10px;
+}
+.col-two-thirds {
+	flex-basis: calc((100%/3)*2);
 	margin: 10px;
 }
 
 .col-four {
-	flex-basis: 24%;
+	flex-basis: 25%;
 	margin: 10px;
 }
 
@@ -74,6 +83,25 @@ img {
 .col-six {
 	flex-basis: calc(100%/6);
 	margin: 10px;
+}
+
+// alignment center
+
+.justify-center {
+    justify-content: center;
+}
+
+.align-center {
+    align-items: center;
+}
+
+
+.is-column {
+    flex-direction: column;
+}
+
+.is-column-reverse {
+    flex-direction: column-reverse;
 }
 
 
@@ -88,10 +116,10 @@ img {
  * Flex stuff
  */
 
-.flex {
-    display: flex;
-    flex-direction: column;
-}
+// .flex {
+//     display: flex;
+//     flex-direction: column;
+// }
 .isInline {
     display: -inline-flex;
 }
@@ -122,9 +150,7 @@ img {
 .spaceAround {
     justify-content: space-around;
 }
-.justify-center {
-    justify-content: center;
-}
+
 .justifyEnd {
     justify-content: flex-end;
 }
@@ -134,9 +160,7 @@ img {
 .contentCenter {
     align-content: center;
 }
-.align-center {
-    align-items: center;
-}
+
 .alignEnd {
     align-items: flex-end;
 }
