--- a/css/sass/pages/_home.scss
+++ b/css/sass/pages/_home.scss
@@ -25,7 +25,7 @@
 		p {
 			font-size: 0.9em;
 			margin: 0 20px 20px;
-			font-family: $medium;
+			font-family: $body;
 		}
 		.social-main {
 			visibility: hidden;
