--- a/css/sass/base/_type.scss
+++ b/css/sass/base/_type.scss
@@ -59,13 +59,21 @@ h6 {
     -webkit-margin-start: 0;
     -webkit-margin-end: 0;
 
-    font-family: $bold, "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+    font-family: $black , "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
     color: $reverse;
     margin: 0px;
 }
 
 h1 {
-  font-family: $black;
+  margin-bottom: 0.5em;
+}
+
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin-bottom: 0.25em;
 }
 
 a {
