--- a/css/main.css
+++ b/css/main.css
@@ -1297,7 +1297,7 @@ hr {
   visibility: hidden; }
 
 .prototype-intro-wrapper .welcome-iphone {
-  margin-top: 90px; }
+  margin-top: 60px; }
 
 .prototype-intro-wrapper .intro-text {
   text-align: center; }
@@ -1313,7 +1313,7 @@ hr {
 
 .prototype-intro-wrapper .welcome-iphone {
   text-align: center;
-  margin-bottom: 1em; }
+  margin-bottom: 1.5em; }
   .prototype-intro-wrapper .welcome-iphone img {
     width: 220px; }
 
@@ -1331,7 +1331,10 @@ hr {
           -ms-flex-direction: row;
               flex-direction: row; }
     .prototype-intro-wrapper .intro-text {
-      text-align: left; }
+      text-align: left;
+      -ms-flex-preferred-size: calc((100%/3)*2);
+          flex-basis: calc((100%/3)*2);
+      margin: 10px; }
       .prototype-intro-wrapper .intro-text h1 {
         font-size: 3.5em; }
     .prototype-intro-wrapper .welcome-iphone {
