--- a/css/main.css
+++ b/css/main.css
@@ -373,6 +373,11 @@ img {
       -ms-flex-direction: column-reverse;
           flex-direction: column-reverse; }
 
+.space-between {
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between; }
+
 /**
  * Flex stuff
  */
@@ -414,11 +419,6 @@ img {
 .isMultiple.isReverse {
   -ms-flex-wrap: wrap-reverse;
       flex-wrap: wrap-reverse; }
-
-.space-between {
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between; }
 
 .spaceAround {
   -ms-flex-pack: distribute;
@@ -1279,6 +1279,28 @@ hr {
   background: #F2F2F2;
   width: 100%; }
 
+.scope h1,
+.scope h2,
+.scope h3,
+.scope h4,
+.wireframes h1,
+.wireframes h2,
+.wireframes h3,
+.wireframes h4,
+.mockup h1,
+.mockup h2,
+.mockup h3,
+.mockup h4,
+.final-prototype h1,
+.final-prototype h2,
+.final-prototype h3,
+.final-prototype h4,
+.framer h1,
+.framer h2,
+.framer h3,
+.framer h4 {
+  color: #E94444; }
+
 /**
 	 PROTOTYPE INTRO SECTION
  	 ---------------------------------*/
@@ -1303,8 +1325,8 @@ hr {
   text-align: center; }
   .prototype-intro-wrapper .intro-text h1 {
     font-size: 2em;
-    color: #E94444;
-    text-transform: uppercase; }
+    text-transform: uppercase;
+    color: #E94444; }
   .prototype-intro-wrapper .intro-text h2 {
     font-family: proxima_bold, sans-serif; }
   .prototype-intro-wrapper .intro-text p {
@@ -1362,9 +1384,6 @@ hr {
 /**
  * MOBILE FIRST QUERIES
  */
-.scope .scope-text h2 {
-  color: #E94444; }
-
 .scope .client-sketches > div {
   -ms-flex-preferred-size: 22%;
       flex-basis: 22%;
@@ -1381,14 +1400,15 @@ hr {
  * MOBILE FIRST QUERIES
  */
 /* wireframes section */
-.wireframes .wireframes-container h2,
-.wireframes .wireframes-container h3 {
-  color: #E94444; }
+.wireframes .pen-paper-wireframes {
+  margin-bottom: 30px; }
 
 .wireframes .wireframe-sketches > div {
   -ms-flex-preferred-size: 22%;
       flex-basis: 22%;
   max-width: 22%; }
+  .wireframes .wireframe-sketches > div img {
+    border: solid 1px #e5e5e5; }
 
 .wireframes h6 {
   color: #333;
@@ -1400,16 +1420,22 @@ hr {
 /**
  * MOBILE FIRST QUERIES
  */
-.mockup h1,
-.mockup h2,
-.mockup h3 {
-  color: #E94444; }
-
 @media screen and (min-width: 750px) {
-  /* Mockup section */ }
+  .mockup .mockup-container {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row; }
+  .mockup .mockup-text,
+  .mockup .mockup-screens {
+    -ms-flex-preferred-size: 50%;
+        flex-basis: 50%;
+    max-width: 49%; }
+  .mockup .mockup-text {
+    margin-right: 50px; } }
 
 /**
-	 FINAL SECTION
+	 FINAL PROTOTYPE SECTION
  	 ---------------------------------*/
 /**
  * MOBILE FIRST QUERIES
@@ -1420,13 +1446,20 @@ hr {
       flex-basis: 22%;
   max-width: 24%; }
 
-/* Framer */
+/**
+	 FRAMER SECTION
+ 	 ---------------------------------*/
+/**
+ * MOBILE FIRST QUERIES
+ */
 .framer {
   min-height: 50vh; }
-  .framer .framer-text p {
+  .framer p {
     color: #FEFEE6; }
-  .framer img {
-    width: 50%; }
+  .framer .framer-iphone {
+    margin: 30px 0; }
+    .framer .framer-iphone img {
+      width: 220px; }
 
 /* Footer */
 .footer {
@@ -1442,17 +1475,16 @@ hr {
  */
 @media screen and (min-width: 750px) {
   /* Framer */
-  .framer {
-    min-height: 75vh; }
-    .framer .framer-container {
-      -webkit-box-orient: horizontal;
-      -webkit-box-direction: normal;
-          -ms-flex-direction: row;
-              flex-direction: row; }
-    .framer .framer-text {
-      margin-right: 50px; }
-    .framer img {
-      width: 100%; } }
+  .framer .framer-container {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row; }
+  .framer .framer-iphone {
+    -ms-flex-preferred-size: 25%;
+        flex-basis: 25%;
+    max-width: 25%;
+    text-align: right; } }
 
 /* USER INTERFACE
    ========================================================================== */
@@ -1555,103 +1587,6 @@ hr {
       font-family: proxima_bold, sans-serif; }
   .ui-intro-wrapper .welcome-iphone {
     display: none; }
-
-/* Process section */
-.process {
-  min-height: 50vh;
-  background: #F2F2F2; }
-
-/* scope section */
-.scope .client-sketches > div {
-  -ms-flex-preferred-size: 22%;
-      flex-basis: 22%;
-  max-width: 24%; }
-
-.scope h5 {
-  color: #333;
-  font-family: proxima_light_italic, sans-serif; }
-
-/* wireframes section */
-.wireframes .pen-paper-wireframes {
-  margin-bottom: 30px; }
-
-.wireframes .sketch-wireframes .wireframe-item {
-  -ms-flex-preferred-size: 22%;
-      flex-basis: 22%;
-  max-width: 24%; }
-  .wireframes .sketch-wireframes .wireframe-item img {
-    border: solid 1px #e5e5e5; }
-
-.wireframes .sketch-wireframes h6 {
-  color: #333;
-  font-family: proxima_light_italic, sans-serif; }
-
-/* Mockup section */
-.mockup .mockup-text {
-  max-width: 100%; }
-
-/* Final Prototype */
-.final-prototype .final-prototype-screens > div {
-  -ms-flex-preferred-size: 22%;
-      flex-basis: 22%;
-  max-width: 24%; }
-
-/* Framer */
-.framer {
-  min-height: 50vh; }
-  .framer .framer-text p {
-    color: #FEFEE6; }
-  .framer img {
-    width: 50%; }
-
-/* Footer */
-.footer {
-  height: 200px;
-  background: #000; }
-  .footer .social-footer {
-    color: #fff;
-    text-align: center;
-    font-size: 1.5em; }
-
-/**
- * LARGER THAN TABLET
- */
-@media screen and (min-width: 750px) {
-  /*   Intro section   */
-  .ui-intro-wrapper .ui-watermark {
-    visibility: visible; }
-  .ui-intro-wrapper .ui-case-study .intro-text h1 {
-    font-size: 4em; }
-  .ui-intro-wrapper .welcome-iphone {
-    display: inline;
-    text-align: center; }
-    .ui-intro-wrapper .welcome-iphone img {
-      width: 100%; }
-  /* Mockup section */
-  .mockup .mockup-container {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row; }
-  .mockup .mockup-text,
-  .mockup .mockup-screens {
-    -ms-flex-preferred-size: 50%;
-        flex-basis: 50%;
-    max-width: 49%; }
-  .mockup .mockup-text {
-    margin-right: 50px; }
-  /* Framer */
-  .framer {
-    min-height: 75vh; }
-    .framer .framer-container {
-      -webkit-box-orient: horizontal;
-      -webkit-box-direction: normal;
-          -ms-flex-direction: row;
-              flex-direction: row; }
-    .framer .framer-text {
-      margin-right: 50px; }
-    .framer img {
-      width: 100%; } }
 
 /* RESUME
    ========================================================================== */
