--- a/css/main.css
+++ b/css/main.css
@@ -702,7 +702,7 @@ p {
   font-family: proxima_light, sans-serif, "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   margin: 0;
   font-size: 18px;
-  line-height: 24px;
+  line-height: 26px;
   color: #333; }
 
 h1,
@@ -1130,6 +1130,61 @@ hr {
       top: 83px; } }
 
 /* Larger than Desktop HD */
+/* PROTOTYPE LANDING
+   ========================================================================== */
+/**
+ * MOBILE FIRST QUERIES
+ */
+.p-background-icon {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%); }
+  .p-background-icon img {
+    opacity: 0.08;
+    width: 300px; }
+
+.prototype {
+  text-align: center; }
+  .prototype h1 {
+    font-size: 1.5em; }
+
+.prototype-container {
+  background: #E94444; }
+  .prototype-container h1 {
+    text-transform: uppercase; }
+  .prototype-container .quote-text {
+    font-size: 1.5em; }
+
+/**
+ * LARGER THAN MOBILE
+ */
+@media (min-width: 400px) {
+  .prototype-container .quote-text {
+    font-size: 1.7em; } }
+
+/**
+ * LARGER THAN PHAMBLET
+ */
+/**
+ * LARGER THAN TABLET
+ */
+@media screen and (min-width: 750px) {
+  .p-background-icon img {
+    width: 500px; }
+  .prototype-container article {
+    width: 70%;
+    text-align: left; }
+  .prototype-container h3 {
+    font-size: 2em;
+    margin-bottom: 10px; }
+  .prototype-container .quote-text {
+    font-size: 3em;
+    line-height: 1em; }
+  .prototype-container p {
+    margin-bottom: 15px; } }
+
 /* Interactiive */
 /* Mobile first queries */
 .about-me .wrapper-container {
@@ -1208,62 +1263,6 @@ hr {
     -webkit-transform: translateX(-15%);
             transform: translateX(-15%); } }
 
-/* PROTOTYPE LANDING
-   ========================================================================== */
-/**
- * MOBILE FIRST QUERIES
- */
-.p-background-icon {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%); }
-  .p-background-icon img {
-    opacity: 0.08;
-    width: 300px; }
-
-.prototype {
-  text-align: center; }
-  .prototype h1 {
-    font-size: 1.5em; }
-
-.prototype-container {
-  background: #E94444; }
-  .prototype-container h1 {
-    text-transform: uppercase; }
-  .prototype-container .quote-text {
-    font-size: 1.5em; }
-
-/**
- * LARGER THAN MOBILE
- */
-@media (min-width: 400px) {
-  .prototype-container .quote-text {
-    font-size: 1.7em; } }
-
-/**
- * LARGER THAN PHAMBLET
- */
-/**
- * LARGER THAN TABLET
- */
-@media screen and (min-width: 750px) {
-  .p-background-icon img {
-    width: 500px; }
-  .prototype-container article {
-    width: 70%;
-    text-align: left; }
-  .prototype-container h3 {
-    font-size: 2em;
-    margin-bottom: 10px; }
-  .prototype-container .quote-text {
-    font-size: 3em;
-    line-height: 1em; }
-  .prototype-container p {
-    margin-bottom: 15px; } }
-
-/* Larger than desktop */
 /* PROTOTYPE CASE STUDY / BIRD NERD
    ========================================================================== */
 .prototype-main-wrapper p {
@@ -1486,63 +1485,10 @@ hr {
     max-width: 25%;
     text-align: right; } }
 
-/* USER INTERFACE
-   ========================================================================== */
-/**
- * MOBILE FIRST QUERIES
- */
-.ui {
-  text-align: center; }
-  .ui h1, .ui h2, .ui h3 {
-    font-family: proxima_light, sans-serif; }
-  .ui h1 {
-    font-size: 1.5em; }
-
-.ui-container h1 {
-  text-transform: uppercase; }
-
-.ui-container .quote-text {
-  font-size: 1.5em; }
-
-/**
- * LARGER THAN MOBILE
- */
-@media (min-width: 400px) {
-  .ui-container .quote-text {
-    font-size: 1.7em; } }
-
-/**
- * LARGER THAN PHAMBLET
- */
-/**
- * LARGER THAN TABLET
- */
-@media screen and (min-width: 750px) {
-  .ui-container article {
-    width: 70%;
-    text-align: left; }
-  .ui-container h3 {
-    font-size: 2em;
-    margin-bottom: 10px; }
-  .ui-container .quote-text {
-    font-size: 3em;
-    line-height: 1em; }
-  .ui-container p {
-    margin-bottom: 15px; } }
-
-/* Larger than desktop */
-/* Larger than Desktop HD */
 /* USER INTERFACE CASE STUDY / TANDEM
    ========================================================================== */
-.ui-main-wrapper h1, .ui-main-wrapper h2, .ui-main-wrapper h3, .ui-main-wrapper h4, .ui-main-wrapper h5 {
-  color: #E94444;
-  font-family: avant_bold, sans-serif; }
-
-.ui-main-wrapper h2 {
-  font-size: 2em; }
-
 .ui-main-wrapper p {
-  color: #595959;
+  color: #333;
   margin-bottom: 30px; }
 
 .ui-main-wrapper .scope,
@@ -1554,10 +1500,34 @@ hr {
   background: #F2F2F2;
   width: 100%; }
 
+.scope h1,
+.scope h2,
+.scope h3,
+.scope h4,
+.wireframes h1,
+.wireframes h2,
+.wireframes h3,
+.wireframes h4,
+.mockup h1,
+.mockup h2,
+.mockup h3,
+.mockup h4,
+.final-prototype h1,
+.final-prototype h2,
+.final-prototype h3,
+.final-prototype h4,
+.framer h1,
+.framer h2,
+.framer h3,
+.framer h4 {
+  color: #E94444; }
+
+/**
+	 USER INTERFACE INTRO SECTION
+ 	 ---------------------------------*/
 /**
  * MOBILE FIRST QUERIES
  */
-/* Intro section */
 .ui-intro-wrapper {
   min-height: 100vh; }
   .ui-intro-wrapper .ui-watermark {
@@ -1571,22 +1541,53 @@ hr {
     opacity: 0.02;
     visibility: hidden; }
   .ui-intro-wrapper .intro-text {
-    margin-top: 80px;
-    margin-bottom: 35px; }
+    text-align: center; }
     .ui-intro-wrapper .intro-text h1 {
-      font-size: 3em;
-      color: #E94444;
+      font-size: 2em;
       text-transform: uppercase;
-      font-family: avant_bold, sans-serif; }
+      color: #E94444; }
+    .ui-intro-wrapper .intro-text h2 {
+      font-family: proxima_bold, sans-serif; }
     .ui-intro-wrapper .intro-text p {
       margin-bottom: 5px;
       color: #FEFEE6; }
-    .ui-intro-wrapper .intro-text p:nth-child(4) {
-      margin-bottom: 20px; }
-    .ui-intro-wrapper .intro-text p span {
-      font-family: proxima_bold, sans-serif; }
+
+/**
+ * LARGER THAN TABLET
+ */
+@media screen and (min-width: 750px) {
+  .ui-intro-wrapper .ui-watermark {
+    visibility: visible; }
+  .ui-intro-wrapper .ui-case-study {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row; }
+  .ui-intro-wrapper .intro-text {
+    margin: 10px; }
+    .ui-intro-wrapper .intro-text h1 {
+      font-size: 3.5em; }
   .ui-intro-wrapper .welcome-iphone {
-    display: none; }
+    margin-top: 0px; } }
+
+/**
+	 TANDEM INTRO SECTION
+ 	 ---------------------------------*/
+/**
+ * MOBILE FIRST QUERIES
+ */
+.tandem-intro {
+  text-align: center;
+  color: #333;
+  background: #E94444;
+  min-height: 50vh; }
+
+.tandem-final-design {
+  margin: 30px 0; }
+  .tandem-final-design .tandem-screen-img {
+    margin-bottom: 35px; }
+    .tandem-final-design .tandem-screen-img img {
+      box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.3); }
 
 /* RESUME
    ========================================================================== */
