--- a/css/main.css
+++ b/css/main.css
@@ -1490,47 +1490,60 @@ hr {
 /**
  * MOBILE FIRST QUERIES
  */
-.ui-intro-wrapper {
-  min-height: 100vh; }
-  .ui-intro-wrapper .ui-watermark {
-    width: 100%;
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-            transform: translate(-50%, -50%);
-    position: absolute;
-    z-index: -1;
-    opacity: 0.02;
-    visibility: hidden; }
-  .ui-intro-wrapper .intro-text {
-    text-align: center; }
-    .ui-intro-wrapper .intro-text h1 {
-      font-size: 2em;
-      text-transform: uppercase;
-      color: #E94444; }
-    .ui-intro-wrapper .intro-text h2 {
-      font-family: proxima_bold, sans-serif; }
-    .ui-intro-wrapper .intro-text p {
-      margin-bottom: 5px;
-      color: #FEFEE6; }
+.ui-intro-wrapper .ui-watermark {
+  width: 100%;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  position: absolute;
+  z-index: -1;
+  opacity: 0.02;
+  visibility: hidden; }
+
+.ui-intro-wrapper .welcome-iphone {
+  margin-top: 60px; }
+
+.ui-intro-wrapper .intro-text {
+  text-align: center; }
+  .ui-intro-wrapper .intro-text h1 {
+    font-size: 2em;
+    text-transform: uppercase;
+    color: #E94444; }
+  .ui-intro-wrapper .intro-text h2 {
+    font-family: proxima_bold, sans-serif; }
+  .ui-intro-wrapper .intro-text p {
+    margin-bottom: 5px;
+    color: #FEFEE6; }
+
+.ui-intro-wrapper .welcome-iphone {
+  text-align: center;
+  margin-bottom: 1.5em; }
+  .ui-intro-wrapper .welcome-iphone img {
+    width: 220px; }
 
 /**
  * LARGER THAN TABLET
  */
 @media screen and (min-width: 750px) {
-  .ui-intro-wrapper .ui-watermark {
-    visibility: visible; }
-  .ui-intro-wrapper .ui-case-study {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row; }
-  .ui-intro-wrapper .intro-text {
-    margin: 10px; }
-    .ui-intro-wrapper .intro-text h1 {
-      font-size: 3.5em; }
-  .ui-intro-wrapper .welcome-iphone {
-    margin-top: 0px; } }
+  .ui-intro-wrapper {
+    min-height: 100vh; }
+    .ui-intro-wrapper .ui-watermark {
+      visibility: visible; }
+    .ui-intro-wrapper .ui-case-study {
+      -webkit-box-orient: horizontal;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: row;
+              flex-direction: row; }
+    .ui-intro-wrapper .intro-text {
+      text-align: left;
+      -ms-flex-preferred-size: calc((100%/3)*2);
+          flex-basis: calc((100%/3)*2);
+      margin: 10px; }
+      .ui-intro-wrapper .intro-text h1 {
+        font-size: 3.5em; }
+    .ui-intro-wrapper .welcome-iphone {
+      margin-top: 0px; } }
 
 /**
 	 TANDEM INTRO SECTION
