--- a/css/sass/pages/_ui.scss
+++ b/css/sass/pages/_ui.scss
@@ -22,7 +22,6 @@
  */
 
 .ui-intro-wrapper {
-	min-height: 100vh;
 
 	.ui-watermark {
 		width: 100%;
@@ -33,6 +32,10 @@
 		z-index: -1;
 		opacity: 0.02;
 		visibility: hidden;
+	}
+
+	.welcome-iphone {
+		margin-top: 60px;
 	}
 
 	.intro-text {
@@ -51,6 +54,14 @@
 		}
 	}
 
+	.welcome-iphone {
+		text-align: center;
+		img {
+			width: 220px;
+		}
+		margin-bottom: 1.5em;
+	}	
+
 }
 
 /**
@@ -60,6 +71,7 @@
 @media screen and (min-width: 750px) {
 
 	.ui-intro-wrapper {
+		min-height: 100vh;
 		.ui-watermark {
 			visibility: visible;
 		}
@@ -67,6 +79,8 @@
 			flex-direction: row;
 		}
 		.intro-text {
+			text-align: left;
+			flex-basis: calc((100%/3)*2);
 			margin: 10px;
 			h1 {
 				font-size: 3.5em;
